--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>delinal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
     <style>
       body {
         font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI',
