--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
     <a href="https://twitter.com/youyuxi" target="_blank">X</a> and
     <a href="https://bsky.app/profile/evanyou.me" target="_blank">Bluesky</a>
     where I mostly post about Vue and frontend technologies. If you happen to
-    speak Chinese, my Chinese name is 尤雨溪 (yóu yǔ xī) and I have a
+    speak Chinese, my Chinese name is xxx (xxx) and I have a
     Chinese-only
     <a href="https://twitter.com/yuxiyou" target="_blank">X alt</a>
     for non-tech-focused musings.
